--- a/front/package.json
+++ b/front/package.json
@@ -37,9 +37,10 @@
   "devDependencies": {
     "@angular/cli": "18.0.3",
     "@angular/language-service": "18.0.2",
-    "@types/chart.js": "2.9.30",
-    "@types/node": "20.12.12",
     "@biomejs/biome": "1.7.2",
+    "@types/chart.js": "2.9.30",
+    "@types/jest": "^29.5.14",
+    "@types/node": "20.12.12",
     "ts-node": "7.0.0"
   }
 }
